--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,7 +103,7 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel-android:2.2.2'
 
 //    // Jupiter API
-//    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
 //    androidTestImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
 
     // Mockito Kotlin
