--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
+            android:value="true" />
 
         <uses-library
             android:name="com.google.android.wearable"
