--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,8 +104,7 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
 
     // Fuel
-    //core
-    implementation 'com.github.kittinunf.fuel:fuel:2.2.2'
+//    implementation 'com.github.kittinunf.fuel:fuel:2.2.2'
     //packages
     implementation 'com.github.kittinunf.fuel:fuel-android:2.2.2'
 
@@ -132,4 +131,7 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.0.0'
     testImplementation 'androidx.test.ext:truth:1.0.0'
 
+    def coroutines_version = '1.3.4' //Kotlin coroutines用ライブラリ(async, await)のバージョン
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version" //Kotlin coroutines用ライブラリ(async, await)
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version" //Kotlin coroutines用ライブラリ(async, await)
 }
