--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,9 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.0.0'
     testImplementation 'androidx.test.ext:truth:1.0.0'
 
+    // Shimmer (Content Placeholder Animation)
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     def coroutines_version = '1.3.4' //Kotlin coroutines用ライブラリ(async, await)のバージョン
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version" //Kotlin coroutines用ライブラリ(async, await)
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version" //Kotlin coroutines用ライブラリ(async, await)
