Updated to use PKCE

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-android.enableUnitTestBinaryResources=true
+# Commented out after this message showed. (The option 'android.enableUnitTestBinaryResources' is deprecated.)
+#android.enableUnitTestBinaryResources=true
