--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.example.spotifywearapp"
+        applicationId "com.iwmh.spotifywearapp"
         minSdkVersion 28
         targetSdkVersion 28
         versionCode 1
